--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Saishy's Portfolio
-description: A certain programmer's portfolio
+description: Game Designer and Programmer
 logo: /assets/logo.png
