--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Saishy's Portfolio
 description: Game Designer and Programmer
-logo: /assets/logo.png
+logo: /assets/gabe_commission_smile.png
